--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 		<commons-dbutils.version>1.5</commons-dbutils.version>
 		<commons-fileupload.version>1.3</commons-fileupload.version>
 		<commons-codec.version>1.8</commons-codec.version>
+		<!-- For Test -->
+		<mysql.version>5.1.33</mysql.version>
 	</properties>
 
 	<dependencies>
@@ -98,6 +100,15 @@
 			<artifactId>commons-codec</artifactId>
 			<version>${commons-codec.version}</version>
 		</dependency>
+		
+		<!-- For Test -->
+		<!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
